Mode II supercharged

--- a/examples/test_layers.ipynb
+++ b/examples/test_layers.ipynb
@@ -2,199 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (DatabaseError('database disk image is malformed',)).History will not be written to the database.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Process PoolWorker-11:\n",
-      "Process PoolWorker-16:\n",
-      "Process PoolWorker-14:\n",
-      "Process PoolWorker-6:\n",
-      "Process PoolWorker-15:\n",
-      "Process PoolWorker-4:\n",
-      "Process PoolWorker-7:\n",
-      "Process PoolWorker-2:\n",
-      "Process PoolWorker-1:\n",
-      "Process PoolWorker-8:\n",
-      "Process PoolWorker-10:\n",
-      "Process PoolWorker-5:\n",
-      "Process PoolWorker-9:\n",
-      "Process PoolWorker-3:\n",
-      "Process PoolWorker-13:\n",
-      "Process PoolWorker-12:\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self.run()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self.run()\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "    self.run()\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "    self.run()\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "    task = get()\n",
-      "    task = get()\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    task = get()\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "    task = get()\n",
-      "    racquire()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "    racquire()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "KeyboardInterrupt\n",
-      "    racquire()\n",
-      "    racquire()\n",
-      "    racquire()\n",
-      "    racquire()\n",
-      "    racquire()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "KeyboardInterrupt\n",
-      "    racquire()\n",
-      "    racquire()\n",
-      "    racquire()\n",
-      "    racquire()\n",
-      "    racquire()\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n",
-      "    racquire()\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n",
-      "    racquire()\n",
-      "KeyboardInterrupt\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 378, in get\n",
-      "KeyboardInterrupt\n",
-      "    return recv()\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n",
-      "    racquire()\n",
-      "KeyboardInterrupt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -210,7 +20,7 @@
     "from rtbm import minimizer\n",
     "\n",
     "from rtbm.mathtools import theta_1d, logtheta_1d_phaseI\n",
-    "from riemann_theta.riemann_theta import RiemannTheta\n",
+    "from rtbm.riemann_theta.riemann_theta import RiemannTheta\n",
     "\n",
     "import rtbm.layers as layers\n",
     "import rtbm.model as mdl\n",
@@ -228,9 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1434.49605524+5.69872548808e-14j)\n"
+     ]
+    }
+   ],
    "source": [
     "Q=np.zeros((1,1), dtype=complex)\n",
     "V=np.zeros((1,1), dtype=complex)\n",
@@ -249,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,9 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 80 ms, sys: 0 ns, total: 80 ms\n",
+      "Wall time: 27 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "t = RiemannTheta(X/(2j*np.pi),1j*Q/(2*np.pi))"
@@ -268,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8 s, sys: 2.21 s, total: 10.2 s\n",
+      "Wall time: 8.16 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "t = test(np.pi*X/(2j*np.pi),np.exp(1j*np.pi*1j*Q[0,0]/(2*np.pi)))"
@@ -287,9 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(41.3273135097+0j)\n",
+      "[41.32731351+0.j]\n",
+      "(41.3273135097+0j)\n"
+     ]
+    }
+   ],
    "source": [
     "Q=np.zeros((1,1), dtype=float)\n",
     "V=np.zeros((1,1), dtype=float)\n",
@@ -305,9 +151,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "41.0/25.0"
    ]
@@ -321,9 +178,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0 in 0.13(s), cost = 4.251499\n",
+      "Iteration 100 in 0.16(s), cost = 3.447689\n",
+      "Iteration 200 in 0.20(s), cost = 2.946243\n",
+      "Iteration 300 in 0.23(s), cost = 2.604480\n",
+      "Iteration 400 in 0.27(s), cost = 2.354048\n",
+      "Iteration 500 in 0.30(s), cost = 2.158295\n",
+      "Iteration 600 in 0.34(s), cost = 1.995810\n",
+      "Iteration 700 in 0.38(s), cost = 1.853266\n",
+      "Iteration 800 in 0.41(s), cost = 1.722028\n",
+      "Iteration 900 in 0.45(s), cost = 1.596456\n",
+      "('Cost: ', 1.4742730597576594)\n",
+      "('Sol: ', array([0.56467627, 0.52565986, -0.71925226, -0.37005485, -0.6493147 ,\n",
+      "       0.36040082, -0.38250941]))\n",
+      "Time: 0 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.56467627, 0.52565986, -0.71925226, -0.37005485, -0.6493147 ,\n",
+       "       0.36040082, -0.38250941])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def funcA(x):\n",
     "    return 0.6-0.3*x\n",
