--- a/tests/RiemannThetaTests.ipynb
+++ b/tests/RiemannThetaTests.ipynb
@@ -29,19 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   7109.49433408+0.j 3101454.44933345+0.j  174935.23564052+0.j ...\n",
-      " 1949858.06323796+0.j  369163.87421146+0.j 2791553.91275703+0.j]\n",
-      "1.587874\n",
-      "[   7109.49433408+0.j 3101454.44933345+0.j  174935.23564052+0.j ...\n",
-      " 1949858.06323796+0.j  369163.87421146+0.j 2791553.91275703+0.j]\n",
-      "0.967179\n"
+      "0.26028\n",
+      "0.258048\n"
      ]
     },
     {
@@ -50,7 +46,7 @@
        "0.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,20 +54,20 @@
    "source": [
     "# RT\n",
     "Q=np.zeros((1,1), dtype=complex)\n",
-    "Q[0,0]=0.01j\n",
+    "Q[0,0]=5j\n",
     "\n",
-    "X = 1j*np.random.uniform(-100,100,(100000,1))\n",
+    "X = 1j*np.random.uniform(-100,100,(15000,1))\n",
     "\n",
     "tic = time.clock()\n",
     "t1=RiemannTheta.log_eval(X,Q, mode=0)\n",
     "toc = time.clock()\n",
-    "print(t1)\n",
+    "#print(t1)\n",
     "print(toc-tic)\n",
     "\n",
     "tic = time.clock()\n",
     "t2=RiemannTheta.log_eval(X,Q, mode=1)\n",
     "toc = time.clock()\n",
-    "print(t2)\n",
+    "#print(t2)\n",
     "\n",
     "print(toc-tic)\n",
     "\n",
@@ -81,21 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   7117.49686253+1.57079633j 3101465.49112116+1.57079633j\n",
-      "  174944.83981671-1.57079633j ... 1949868.87296815-1.57079633j\n",
-      "  369173.85180352-1.57079633j 2791564.90190832-1.57079633j]\n",
-      "2.1628\n",
-      "[   7117.49686253+1.57079633j 3101465.49112116+1.57079633j\n",
-      "  174944.83981671-1.57079633j ... 1949868.87296815-1.57079633j\n",
-      "  369173.85180352-1.57079633j 2791564.90190832-1.57079633j]\n",
-      "1.207814\n"
+      "0.267073\n",
+      "0.269135\n"
      ]
     },
     {
@@ -104,7 +94,7 @@
        "0.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,11 +104,59 @@
     "tic = time.clock()\n",
     "t1=RiemannTheta.log_eval(X,Q, mode=0, derivs=[[1]])\n",
     "toc = time.clock()\n",
-    "print(t1)\n",
+    "#print(t1)\n",
     "print(toc-tic)\n",
     "\n",
     "tic = time.clock()\n",
     "t2=RiemannTheta.log_eval(X,Q, mode=1, derivs=[[1]])\n",
+    "toc = time.clock()\n",
+    "#print(t2)\n",
+    "\n",
+    "print(toc-tic)\n",
+    "\n",
+    "x=t1-t2\n",
+    "max(abs(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.+31.3534764j  0. -6.53321695j 0. +6.28295253j ... 0.-69.11503905j\n",
+      " 0.+31.41590784j 0. +5.93102239j]\n",
+      "0.029572\n",
+      "[0.+31.3534764j  0. -6.53321695j 0. +6.28295253j ... 0.-69.11503905j\n",
+      " 0.+31.41590784j 0. +5.93102239j]\n",
+      "0.015263\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.4210854715202004e-14"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ratio \n",
+    "# Derivatives\n",
+    "tic = time.clock()\n",
+    "t1=RiemannTheta.normalized_eval(X,Q, mode=0, derivs=[[1]])\n",
+    "toc = time.clock()\n",
+    "print(t1)\n",
+    "print(toc-tic)\n",
+    "\n",
+    "tic = time.clock()\n",
+    "t2=RiemannTheta.normalized_eval(X,Q, mode=1, derivs=[[1]])\n",
     "toc = time.clock()\n",
     "print(t2)\n",
     "\n",
@@ -137,21 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-19.13011290-3.14159265e+00j -20.49225504+3.14159265e+00j\n",
-      "  -4.36717119+5.74761615e-15j ...  -7.60342636-4.01206271e-14j\n",
-      " -19.37073619-6.92931096e-09j -19.22244250+3.14159264e+00j]\n",
-      "2.278771\n",
-      "[-19.13011290-3.14159265e+00j -20.49225504+3.14159265e+00j\n",
-      "  -4.36717119+5.74761615e-15j ...  -7.60342636-4.01206271e-14j\n",
-      " -19.37073619-6.92931096e-09j -19.22244250+3.14159264e+00j]\n",
-      "0.565608\n"
+      "[ -8.01354997-8.62617929e-14j -19.49257046-5.20840974e-09j\n",
+      " -20.29853424+2.39698797e-09j ...   0.93502301-5.70266509e-18j\n",
+      " -20.49831056-5.79893264e-09j -19.20190227-3.14159265e+00j]\n",
+      "1.810956\n",
+      "[ -8.01354997-8.62617929e-14j -19.49257046-5.20840974e-09j\n",
+      " -20.29853424+2.39698797e-09j ...   0.93502301-5.70266509e-18j\n",
+      " -20.49831056-5.79893264e-09j -19.20190227-3.14159265e+00j]\n",
+      "0.472419\n"
      ]
     },
     {
@@ -160,7 +198,7 @@
        "0.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,21 +229,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-22.68508745-1.32476508e-07j -23.97569645+3.14159082e+00j\n",
-      "   0.14971746-3.14159265e+00j ...  -2.88877023-3.14159265e+00j\n",
-      " -23.98256519+1.04258924e-05j -16.39105400+3.14159265e+00j]\n",
-      "2.414286\n",
-      "[-22.68508745-1.32476508e-07j -23.97569645+3.14159082e+00j\n",
-      "   0.14971746-3.14159265e+00j ...  -2.88877023-3.14159265e+00j\n",
-      " -23.98256519+1.04258924e-05j -16.39105400+3.14159265e+00j]\n",
-      "0.689113\n"
+      "[ -3.27861515-9.93668123e-15j -14.97319110+3.14159265e+00j\n",
+      " -23.93402785+3.35686623e-06j ...   4.65963505+2.16908014e-18j\n",
+      " -23.62797400+5.31547877e-06j -23.35494068-3.14159092e+00j]\n",
+      "1.869961\n",
+      "[ -3.27861515-9.93668123e-15j -14.97319110+3.14159265e+00j\n",
+      " -23.93402785+3.35686623e-06j ...   4.65963505+2.16908014e-18j\n",
+      " -23.62797400+5.31547877e-06j -23.35494068-3.14159092e+00j]\n",
+      "0.576936\n"
      ]
     },
     {
@@ -214,7 +252,7 @@
        "0.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,10 +277,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 113.85806873-1.95221472e-11j -167.75145097+1.50068459e-06j\n",
+      "  -13.05257837-7.35682393e-05j ...   41.45514683+4.21792050e-15j\n",
+      "  -54.59274469-1.09476573e-03j  -48.65085063+1.01529823e-03j]\n",
+      "1.98008\n",
+      "[ 113.85806873-1.95221472e-11j -167.75145097+1.50068459e-06j\n",
+      "  -13.05257837-7.35682393e-05j ...   41.45514683+4.21792050e-15j\n",
+      "  -54.59274469-1.09476573e-03j  -48.65085063+1.01529823e-03j]\n",
+      "1.110374\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ratio \n",
+    "# Derivatives\n",
+    "tic = time.clock()\n",
+    "t1=RiemannTheta.normalized_eval(X,Q, mode=0, derivs=[[1]])\n",
+    "toc = time.clock()\n",
+    "print(t1)\n",
+    "print(toc-tic)\n",
+    "\n",
+    "tic = time.clock()\n",
+    "t2=RiemannTheta.normalized_eval(X,Q, mode=2, derivs=[[1]])\n",
+    "toc = time.clock()\n",
+    "print(t2)\n",
+    "\n",
+    "print(toc-tic)\n",
+    "\n",
+    "x=t1-t2\n",
+    "max(abs(x))"
+   ]
   },
   {
    "cell_type": "code",
