--- a/examples/basic_tutorial.ipynb
+++ b/examples/basic_tutorial.ipynb
@@ -43,9 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import rtbm"
@@ -61,9 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -88,9 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = rtbm.RTBM(1,1) # allocates 1 RTBM with (Nv=1,Nh=1)\n",
@@ -110,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lest generate some simple gaussian data\n",
+    "# lets generate some simple gaussian data\n",
     "n = 1000\n",
     "data = (np.random.normal(5,10,n)).reshape(1,n)\n",
     "plt.hist(data.T, bins=50, normed=True);"
@@ -129,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# and now we train with the CMA algorithm\n",
+    "# and now we load the CMA optimization algorithm\n",
     "from rtbm import minimizer\n",
     "minim = minimizer.CMA()"
    ]
@@ -142,7 +136,10 @@
    "source": [
     "# and now we train with the logarithmic error function (see rtbm.costfunctions)\n",
     "from rtbm.costfunctions import logarithmic\n",
-    "solution = minim.train(logarithmic(), a, data, tolfun=1e-4)"
+    "solution = minim.train(logarithmic(), a, data, tolfun=1e-4)\n",
+    "\n",
+    "# Here tolfun= is the stopping condition\n",
+    "# Alternatively, one can use maxiter = "
    ]
   },
   {
@@ -187,9 +184,13 @@
     "from rtbm import model, layers\n",
     "\n",
     "M = model.Model()\n",
-    "M.add(layers.DiagExpectationUnitLayer(1,3,phase=1))\n",
+    "M.add(layers.DiagExpectationUnitLayer(1,3, Wmax=2,Bmax=2,Qmax=10,param_bound=10, phase=1))\n",
     "M.add(layers.DiagExpectationUnitLayer(3,3,phase=1))\n",
-    "M.add(layers.DiagExpectationUnitLayer(3,1,phase=1))"
+    "M.add(layers.DiagExpectationUnitLayer(3,1,phase=1))\n",
+    "\n",
+    "# Xmax random initalization value cutoff\n",
+    "# param_bound overall maximum value parameters can take\n",
+    "# phase = 1: Phase I, phase =1j : Phase 2"
    ]
   },
   {
@@ -232,15 +233,27 @@
     "from rtbm.costfunctions import mse\n",
     "\n",
     "minim = minimizer.CMA()\n",
-    "minim.train(mse(), M, X, Y, tolfun=1e-4)"
+    "minim.train(mse(), M, X, Y, maxiter=1000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "npoints = 500\n",
+    "test_X = (np.linspace(0, 100, npoints)).reshape((1, npoints))\n",
+    "\n",
+    "plt.plot(X.flatten(), Y.flatten(),\"og-\", label='target')\n",
+    "plt.plot(test_X.flatten(), np.real(M.predict(test_X)).flatten(),\"bo-\", label='fit')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -261,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
