get layer function added to model

--- a/examples/MNIST_exploration.ipynb
+++ b/examples/MNIST_exploration.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (DatabaseError('database disk image is malformed',)).History will not be written to the database.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -51,11 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAADctJREFUeJzt3XGMlPWdx/HP92iJia0Kxx5BULdX\nyYnxD7hMSE3xwtkrEdOIGGPApHKGHDV29Qg10ViSUxMTQ66Qxlyq25OUnj2gCTWiMV6VXGJIzsZB\nV1DW0z1YLLiyi5QAiUKx3/tjH5pFd34zzDzPPLN8369kszPP93me3zcTPjwz85udn7m7AMTzF2U3\nAKAchB8IivADQRF+ICjCDwRF+IGgCD8QFOEHgiL8QFBfaedg06ZN8+7u7nYOCYQyODioI0eOWCP7\nthR+M7tJ0k8lTZL07+7+RGr/7u5uVavVVoYEkFCpVBret+mn/WY2SdK/SVos6VpJy83s2mbPB6C9\nWnnNP1/SgLvvc/fTkrZIWpJPWwCK1kr4Z0r6/Zj7B7Nt5zCzVWZWNbPqyMhIC8MByFPh7/a7e6+7\nV9y90tXVVfRwABrUSvgPSbpizP1Z2TYAE0Ar4X9D0mwz+4aZTZa0TNL2fNoCULSmp/rc/YyZ9Uj6\nL41O9W1093dz6wxAoVqa53f3lyS9lFMvANqIj/cCQRF+ICjCDwRF+IGgCD8QFOEHgiL8QFCEHwiK\n8ANBEX4gKMIPBEX4gaAIPxAU4QeCIvxAUIQfCIrwA0ERfiAowg8ERfiBoAg/EFRbl+hGMfbu3Vuz\n9uKLLyaPffrpp5P1+fPnJ+vz5s1L1lNWr16drE+ePLnpc6M+rvxAUIQfCIrwA0ERfiAowg8ERfiB\noAg/EFRL8/xmNijphKTPJZ1x90oeTeFc9ebiH3jggZq1kydPtjT2vn37kvUtW7Y0fe5KJf3P5cYb\nb2z63Kgvjw/5/L27H8nhPADaiKf9QFCtht8l/dbMdpnZqjwaAtAerT7tX+Duh8zsryS9Ymbvuftr\nY3fI/lNYJUlXXnlli8MByEtLV353P5T9Hpb0nKQv/RWIu/e6e8XdK11dXa0MByBHTYffzC42s6+f\nvS1pkaR38moMQLFaedo/XdJzZnb2PP/p7i/n0hWAwpm7t22wSqXi1Wq1beNdKI4ePZqsz5kzp2Zt\neHg473Zyc9lllyXrW7duTdYXLVqUZzsXhEqlomq1ao3sy1QfEBThB4Ii/EBQhB8IivADQRF+ICi+\nunsCmDp1arL+6KOP1qytWbMmeeynn36arNf7SPaHH36YrKccO3YsWX/55fTHRpjqaw1XfiAowg8E\nRfiBoAg/EBThB4Ii/EBQhB8Iinn+C8A999xTs/bUU08lj3377beT9UsuuaSpnvLQ09NT2tgRcOUH\ngiL8QFCEHwiK8ANBEX4gKMIPBEX4gaCY57/ArV27Nll//PHHk/W+vr482zkvp06dKm3sCLjyA0ER\nfiAowg8ERfiBoAg/EBThB4Ii/EBQdef5zWyjpO9JGnb367JtUyVtldQtaVDSHe7+h+LaRLNuv/32\nZH3BggXJer3vxt+zZ89599Soep9R2LZtW2FjR9DIlf8Xkm76wraHJO1w99mSdmT3AUwgdcPv7q9J\nOvqFzUskbcpub5J0a859AShYs6/5p7v7UHb7Y0nTc+oHQJu0/Iafu7skr1U3s1VmVjWz6sjISKvD\nAchJs+E/bGYzJCn7PVxrR3fvdfeKu1e6urqaHA5A3poN/3ZJK7LbKyQ9n087ANqlbvjNbLOk/5H0\nN2Z20MxWSnpC0nfN7ANJ/5DdBzCB1J3nd/flNUrfybkXFODZZ59N1nfv3p2sFzmPX88NN9xQ2tgR\n8Ak/ICjCDwRF+IGgCD8QFOEHgiL8QFB8dfcE8N577yXrS5curVkbGBhIHnvmzJmmemqHW265pewW\nLmhc+YGgCD8QFOEHgiL8QFCEHwiK8ANBEX4gKOb5J4D+/v5kff/+/TVrnTyPX8+GDRuS9SeffLJN\nnVyYuPIDQRF+ICjCDwRF+IGgCD8QFOEHgiL8QFDM808Aqb/Xl6R169bVrD344IPJYz/77LOmemqH\njz76qOwWLmhc+YGgCD8QFOEHgiL8QFCEHwiK8ANBEX4gqLrz/Ga2UdL3JA27+3XZtkck/ZOkkWy3\nh939paKaRNr9999fszZ79uzksceOHWtp7HrfF9DT01Ozdvz48ZbGRmsaufL/QtJN42zf4O5zsx+C\nD0wwdcPv7q9JOtqGXgC0USuv+XvMbLeZbTSzKbl1BKAtmg3/zyR9U9JcSUOSflJrRzNbZWZVM6uO\njIzU2g1AmzUVfnc/7O6fu/ufJP1c0vzEvr3uXnH3SldXV7N9AshZU+E3sxlj7i6V9E4+7QBol0am\n+jZLWihpmpkdlPQvkhaa2VxJLmlQ0g8K7BFAAeqG392Xj7P5mQJ6QQEWL15c6PndPVkfGBioWXvs\nsceSx/b19SXrBw4cSNavuuqqZD06PuEHBEX4gaAIPxAU4QeCIvxAUIQfCIqv7kZLTp8+nazXm85L\nmTx5crI+adKkps8NrvxAWIQfCIrwA0ERfiAowg8ERfiBoAg/EBTz/GjJ2rVrCzv3ypUrk/VZs2YV\nNnYEXPmBoAg/EBThB4Ii/EBQhB8IivADQRF+ICjm+Rv0ySef1KzdfffdyWOXLVuWrN95551N9dQO\nQ0NDyXpvb29hY992222FnRtc+YGwCD8QFOEHgiL8QFCEHwiK8ANBEX4gqLrz/GZ2haRfSpouySX1\nuvtPzWyqpK2SuiUNSrrD3f9QXKvluu+++2rWXnjhheSx77//frI+c+bMlupXX311zdquXbuSx9br\nbd26dcn68ePHk/WUNWvWJOuXX3550+dGfY1c+c9I+pG7XyvpW5J+aGbXSnpI0g53ny1pR3YfwARR\nN/zuPuTub2a3T0jqlzRT0hJJm7LdNkm6tagmAeTvvF7zm1m3pHmSfidpuruf/eznxxp9WQBggmg4\n/Gb2NUnbJK1293Ne6Lm7a/T9gPGOW2VmVTOrjoyMtNQsgPw0FH4z+6pGg/8rd/9Ntvmwmc3I6jMk\nDY93rLv3unvF3StdXV159AwgB3XDb2Ym6RlJ/e6+fkxpu6QV2e0Vkp7Pvz0ARWnkT3q/Len7kvaY\nWV+27WFJT0j6tZmtlHRA0h3FtNgZUlN9+/fvTx77+uuvJ+sLFy5M1ru7u5P1OXPm1Kzt3LkzeeyJ\nEyeS9VZdc801NWv1lu++6KKL8m4HY9QNv7vvlGQ1yt/Jtx0A7cIn/ICgCD8QFOEHgiL8QFCEHwiK\n8ANB8dXdDbr++uubqknSXXfdlazfe++9yfrg4GBL9SJNmTIlWe/v729TJzhfXPmBoAg/EBThB4Ii\n/EBQhB8IivADQRF+ICjm+XOwfv36ZP3UqVPJ+smTJ1sa/6233qpZ27x5c0vnvvTSS5P1V199taXz\nozxc+YGgCD8QFOEHgiL8QFCEHwiK8ANBEX4gKBtdaas9KpWKV6vVto0HRFOpVFStVmt91f45uPID\nQRF+ICjCDwRF+IGgCD8QFOEHgiL8QFB1w29mV5jZf5vZXjN718z+Odv+iJkdMrO+7Ofm4tsFkJdG\nvszjjKQfufubZvZ1SbvM7JWstsHd/7W49gAUpW743X1I0lB2+4SZ9UuaWXRjAIp1Xq/5zaxb0jxJ\nv8s29ZjZbjPbaGbjrttkZqvMrGpm1ZGRkZaaBZCfhsNvZl+TtE3Sanc/Lulnkr4paa5Gnxn8ZLzj\n3L3X3SvuXunq6sqhZQB5aCj8ZvZVjQb/V+7+G0ly98Pu/rm7/0nSzyXNL65NAHlr5N1+k/SMpH53\nXz9m+4wxuy2V9E7+7QEoSiPv9n9b0vcl7TGzvmzbw5KWm9lcSS5pUNIPCukQQCEaebd/p6Tx/j74\npfzbAdAufMIPCIrwA0ERfiAowg8ERfiBoAg/EBThB4Ii/EBQhB8IivADQRF+ICjCDwRF+IGgCD8Q\nVFuX6DazEUkHxmyaJulI2xo4P53aW6f2JdFbs/Ls7Sp3b+j78toa/i8NblZ190ppDSR0am+d2pdE\nb80qqzee9gNBEX4gqLLD31vy+Cmd2lun9iXRW7NK6a3U1/wAylP2lR9ASUoJv5ndZGb/a2YDZvZQ\nGT3UYmaDZrYnW3m4WnIvG81s2MzeGbNtqpm9YmYfZL/HXSatpN46YuXmxMrSpT52nbbidduf9pvZ\nJEnvS/qupIOS3pC03N33trWRGsxsUFLF3UufEzazv5N0UtIv3f26bNs6SUfd/YnsP84p7v5gh/T2\niKSTZa/cnC0oM2PsytKSbpX0jyrxsUv0dYdKeNzKuPLPlzTg7vvc/bSkLZKWlNBHx3P31yQd/cLm\nJZI2Zbc3afQfT9vV6K0juPuQu7+Z3T4h6ezK0qU+dom+SlFG+GdK+v2Y+wfVWUt+u6TfmtkuM1tV\ndjPjmJ4tmy5JH0uaXmYz46i7cnM7fWFl6Y557JpZ8TpvvOH3ZQvc/W8lLZb0w+zpbUfy0ddsnTRd\n09DKze0yzsrSf1bmY9fsitd5KyP8hyRdMeb+rGxbR3D3Q9nvYUnPqfNWHz58dpHU7Pdwyf38WSet\n3DzeytLqgMeuk1a8LiP8b0iabWbfMLPJkpZJ2l5CH19iZhdnb8TIzC6WtEidt/rwdkkrstsrJD1f\nYi/n6JSVm2utLK2SH7uOW/Ha3dv+I+lmjb7j/3+SflxGDzX6+mtJb2c/75bdm6TNGn0a+EeNvjey\nUtJfStoh6QNJr0qa2kG9/YekPZJ2azRoM0rqbYFGn9LvltSX/dxc9mOX6KuUx41P+AFB8YYfEBTh\nB4Ii/EBQhB8IivADQRF+ICjCDwRF+IGg/h+py0p9Jsq34QAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f971c0d6850>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Visualize individual pics\n",
     "i=10\n",
